# PVLMatchPrediction

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GITHUB_CHECKLIST.md  LICENSE  PROJECT_REFERENCE.md  QUICK_START.md  README.md  README_backup.md  pyproject.toml  requirements.txt  run_simulation.py
.github/workflows/: model_metrics.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/csv_files/: X_features.csv  X_features_with_players.csv  feature_importance_with_players.csv  volleyball_features.csv  volleyball_features_with_players.csv  y_target.csv  y_target_with_players.csv
data/databases/: volleyball_data.db  volleyball_data_backup.db
data/xml_files/: Match001.xml  Match0032024.xml  Match0042024.xml  Match046.xml  PVL2023A-W01-AKAvCMF-XML.xml  PVL2023A-W02-CCSvPGA-XML.xml  PVL2023A-W03-HSHvFTL-XML.xml  PVL2023A-W04-CTCvCHD-XML.xml  PVL2023A-W05-CCSvCHD-XML.xml  PVL2023A-W06-PGAvCMF-XML.xml  PVL2023A-W07-CTCvABM-XML.xml  PVL2023A-W08-AKAvFLT-XML.xml  PVL2023A-W09-CHDvAKA-XML.xml  PVL2023A-W10-CMFvCCS-XML.xml  PVL2023A-W11-FTLvCTC-XML.xml  PVL2023A-W12-ABMvHSH-XML.xml  PVL2023A-W13-CHDvPGA-XML.xml  PVL2023A-W14-FTLvCCS-XML.xml  PVL2023A-W15-ABMvAKA-XML.xml  PVL2023A-W16-HSHvCTC-XML.xml  PVL2023A-W17-CMFvABM-XML.xml  PVL2023A-W18-PGAvHSH-XML.xml  PVL2023A-W19-CCSvCTC-XML.xml  PVL2023A-W20-CHDvFTL-XML.xml  PVL2023A-W21-CCSvABM-XML.xml  (+487 more)
docs/: DATA_QUALITY_REPORT.md  FINAL_MODEL_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  tournament_format.md
examples/: README.md  basic_simulation.py  compare_models.py  player_statistics.py
models/: best_model_with_players.pkl  best_model_with_players_random.pkl  best_model_with_players_timeaware.pkl  calibrated_xgboost_with_players.pkl  volleyball_predictor_with_players_uncalibrated.pkl
outputs/: calibration_curves_20251108_020935.csv  calibration_curves_20251119_125546.csv  metrics_comparison_20251108_021930.md  metrics_comparison_20251108_022111.md  metrics_comparison_20251108_024300.md  requirements.txt
scripts/: __init__.py  batch_processor.py  compare_metrics.py  complete_tournament_simulation.py  config.py  database_manager.py  feature_engineering.py  feature_engineering_with_players.py  fetch_all_matches.py  multi_model_tournament_simulation.py  multi_model_tournament_simulation_timeaware.py  parse_volleyball_data.py  simulate_remaining_matches.py  simulate_tournament.py  tournament_visualization.py  train_naive_bayes.py  train_with_player_features.py  train_xgboost.py  train_xgboost_with_players.py  validate_data.py  validate_metrics.py
(+13 files in other folders)
